changes to yml file

--- a/antora.yml
+++ b/antora.yml
@@ -1,6 +1,6 @@
-name: component-a
-title: Component A
-version: 1.5.6
+name: project-starter-Pack
+title: New Project Starter Pack
+version: 1.0.0
 start_page: inline-text-formatting.adoc
 asciidoc:
   attributes:
