--- a/antora.yml
+++ b/antora.yml
@@ -1,4 +1,4 @@
-name: project-starter-Pack
+name: projectstarterpack 
 title: New Project Starter Pack
 version: 1.0.0
 start_page: inline-text-formatting.adoc
